# project7

./: README.md  digits.ipynb  digits.py  digits_multi.ipynb  digits_multi.py  pyproject.toml  requirements.txt  tf.ipynb  tf.py
.ipynb_checkpoints/: digits-checkpoint.ipynb  digits_multi-checkpoint.ipynb  tf-checkpoint.ipynb
nn/: __init__.py  nn.py  preprocess.py
test/: test.py  test_nn.py
